--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
     "@react-navigation/bottom-tabs": "^6.5.12",
-    "@react-navigation/native": "^6.1.10",
-    "@react-navigation/native-stack": "^6.9.18",
+    "@react-navigation/native": "^6.1.12",
+    "@react-navigation/native-stack": "^6.9.20",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
     "nodemon": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-safe-area-context": "4.8.2",
+    "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
