--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
     "@react-native-async-storage/async-storage": "^1.22.2",
-    "@react-navigation/bottom-tabs": "^6.5.12",
+    "@react-navigation/bottom-tabs": "^6.5.14",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.23",
@@ -20,7 +20,9 @@
     "nodemon": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
     "react-native": "0.73.4",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
