--- a/package.json
+++ b/package.json
@@ -16,20 +16,25 @@
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.23",
     "expo": "~50.0.7",
+    "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
+    "leaflet": "^1.9.4",
     "nodemon": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
+    "react-leaflet": "^4.2.1",
     "react-native": "0.73.4",
+    "react-native-maps": "^1.10.3",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6",
+    "react-native-web": "^0.19.10",
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eslint-plugin-import": "^2.29.1"
   },
   "private": true
 }
